Adds rest api client and refactor stucture
